# minitswap-hook

./: .gitignore  README.md
evm/: ICosmos.abi  MinitswapHook.abi  MinitswapHook.sol  minitswap-hook.sol
evm/interface/: ICosmos.sol  IERC20.sol
move/: Move.toml
move/sources/: minitswap-hook.move
wasm/: Cargo.toml  build.rs
wasm-protogen/: Cargo.toml
wasm-protogen/src/: lib.rs  msg_initiate_token_withdrawal.rs
wasm-protogen/src/protos/: msg_initiate_token_withdrawal.proto
wasm/src/: execute.rs  lib.rs  mod.rs  msg_initiate_token_withdrawal.rs  msgs.rs
